--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: upsatish's posts
 description: >- # this means to ignore newlines until "baseurl:"
-  Cloud fella | Musician
+  Musician | Father | Cloud fella
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: upsatish123
