--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: upsatish123
 github_username:  upsatish
-linkedin_username: usman-satish
+#linkedin_username: usman-satish
 google_analytics: UA-142469998-1
 
 # Build settings
